Sunday night, index, skill, education done.

--- a/index.html
+++ b/index.html
@@ -168,8 +168,13 @@
             <h1><u>Contact Us</u>:</h1>
                     <p>You can contact me any Plateform which you like, such as github, Linkedin, Instagram, Gmail etc...</p>
         </div>
-            <img class="sectionimg" src="images/logo.jpg" alt="Click to Explore">
-        </a>
+        <div class="contactusimgs">
+            <img src="images/icon/circle-arrow-up-solid.svg">
+            <img src="images/icon/circle-arrow-up-solid.svg">
+            <img src="images/icon/circle-arrow-up-solid.svg">
+            <img src="images/icon/circle-arrow-up-solid.svg">
+        </div>
+        
     </div>
 
         </section>
@@ -180,8 +185,8 @@
             <h1><u>Resume</u>:</h1>
             <p>Aspiring full-stack developer with a strong foundation in programming and web development. Passionate about learning new technologies and building efficient digital solutions.</p>
         </div>
-        <a href="cv.html">
-            <img class="sectionimg" src="images/logo.jpg" alt="Click to Explore">
+        <a href="project.html">
+            <img class="sectionimg resumeimg" src="images/sarfraz.png" title="Click to Explore">
         </a>
     </div>
 
