update resume page

--- a/skill.html
+++ b/skill.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Skills</title>
-    <link rel="icon" href="images/icon/circle-check-solid.svg">
+    <link rel="icon" href="images/icon/skills.svg">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="sarfraz">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/icon/circle-check-solid.svg" alt="portfolio" title="Portfolio Logo.">
+                        <img src="images/icon/skills.svg" alt="portfolio" title="Portfolio Logo.">
                     </a>
                 </div>
                 <div class="name">
