--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div>
                 <a href="intro.html">
-                <img class="sectionimg" src="images/logo.jpg" alt="Click to Explore">
+                <img class="sectionimg" src="images/Profile_pic.jpg" alt="Click to Explore">
             </a>
             </div>
         </div>
@@ -113,7 +113,7 @@
                 <b>Expected Graduation:</b> Mid 2026</p>
         </div>
         <a href="education.html">
-            <img class="sectionimg" src="images/logo.jpg" alt="Click to Explore">
+            <img class="sectionimg" src="images/DP.jpg" alt="Click to Explore">
         </a>
     </div>
         </section>
@@ -127,7 +127,7 @@
                 I have a strong foundation in programming with expertise in C++, SQL, and web technologies like HTML & CSS. I am proficient in database management using MySQL, PHP and Oracle, along with experience in MS Office tools. Currently, I am learning JavaScript to enhance my web development skills and transition into full-stack development</p>
             </div>
             <a href="skill.html">
-                <img class="sectionimg" src="images/logo.jpg" alt="Click to Explore">
+                <img class="sectionimg" src="images/black_coat.jpg" alt="Click to Explore">
             </a>
         </div>
 
@@ -136,7 +136,7 @@
     <section>
         <div id="c3" class="projectsection transform">
             <div class="contentsection">
-            <h1><u>Projects</u>:</h1>
+            <h1><u>Projects</u>:</h1><br>
             <p>I have built multiple static websites using HTML and CSS, showcasing my frontend development skills. Currently, I am expanding my projects by learning JavaScript to create dynamic and interactive web applications.</p>
         </div>
         <a href="project.html">
@@ -149,14 +149,14 @@
     <section>
     <div id="c4" class="certificatesection transform">
         <div class="sectioncontent">
-        <h1><u>Certificates</u>:</h1>
+        <h1><u>Certificates</u>:</h1><br>
         <p>Currently working on earning **certifications** in various technical skills.  
             Focusing on **MS Office, SQL, web development, and other IT-related courses**.  
             Actively exploring **free and valuable certification platforms** to enhance my expertise.  
             Will update my portfolio as I achieve new **certifications and skill milestones**.</p>
     </div>
     <a href="certificate.html">
-        <img class="sectionimg" src="images/logo.jpg" alt="Click to Explore">
+        <img class="sectionimg" src="images/ok.ico" alt="Click to Explore">
     </a>
 </div>
 
@@ -165,14 +165,18 @@
     <section>
         <div id="c5" class="contactussection transform">
             <div class="contentsection">
-            <h1><u>Contact Us</u>:</h1>
+            <h1><u>Contact Us</u>:</h1><br>
                     <p>You can contact me any Plateform which you like, such as github, Linkedin, Instagram, Gmail etc...</p>
         </div>
-        <div class="contactusimgs">
-            <img src="images/icon/circle-arrow-up-solid.svg">
-            <img src="images/icon/circle-arrow-up-solid.svg">
-            <img src="images/icon/circle-arrow-up-solid.svg">
-            <img src="images/icon/circle-arrow-up-solid.svg">
+        <div class="sociallogo">
+            <a href="mailto:saffomian5115@gmail.com" target="_blank">
+            <img src="images/icon/gmail_logo.png" alt="gmail_logo" title="click for gmail"></a>
+            <a href="https://www.linkedin.com/in/saffomian5115" target="_blank">
+            <img src="images/icon/linkedin_logo.png" alt="linkedin_logo" title="click for linkedin"></a>
+            <a href="https://www.instagram.com/saffomian5115" target="_blank">
+            <img src="images/icon/instagram_logo.png" alt="instagram_logo" title="click for instagram"></a>
+            <a href="https://www.github.com/saffomian5115" target="_blank">
+            <img src="images/icon/github_logo.png" alt="github_logo" title="click for github"></a>
         </div>
         
     </div>
@@ -182,10 +186,10 @@
     <section>
         <div id="c6" class="resumesection transform">
             <div class="contentsection">
-            <h1><u>Resume</u>:</h1>
+            <h1><u>Resume</u>:</h1><br><br><br>
             <p>Aspiring full-stack developer with a strong foundation in programming and web development. Passionate about learning new technologies and building efficient digital solutions.</p>
         </div>
-        <a href="project.html">
+        <a href="resume.html">
             <img class="sectionimg resumeimg" src="images/sarfraz.png" title="Click to Explore">
         </a>
     </div>
