complete the projects page

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             <div class="project transition1">
                 <a href="#c3" >Projects</a>
                 <div class="projectContent ">
-                    <a href="project.html#c1" target="_blank">WebSite</a>
-                    <a href="project.html#c2" target="_blank">Program</a>
-                    <a href="project.html#c3" target="_blank">Apps</a>
-                    <a href="project.html#c4" target="_blank">Software</a>
+                    <a href="project.html#c1" target="_blank">frontend UI/UX Projects</a>
+                    <a href="project.html#c2" target="_blank">Mini Projects</a>
+                    <a href="project.html#c3" target="_blank">Backend & API Development</a>
+                    <a href="project.html#c4" target="_blank">full-stack Projects</a>
                 </div>
             </div>
             <div class="certificate transition1">
