--- a/skill.html
+++ b/skill.html
@@ -13,7 +13,7 @@
         <div class="navbar">
             <div class="sarfraz">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="index.html" target="_parent">
                         <img src="images/icon/skills.svg" alt="portfolio" title="Portfolio Logo.">
                     </a>
                 </div>
@@ -22,11 +22,11 @@
                 </div>
             </div>
             <div class="education">
-                <a href="education.html" target="_blank">Education</a>
+                <a href="education.html" >Education</a>
                 <div class="educationContent transition1">
-                    <a href="education.html#c1" target="_blank">Metric</a>
-                    <a href="education.html#c2" target="_blank">Inter</a>
-                    <a href="education.html#c3" target="_blank">Bechler</a>
+                    <a href="education.html#c1" >Metric</a>
+                    <a href="education.html#c2" >Inter</a>
+                    <a href="education.html#c3" >Bechler</a>
                    
                 </div>
             </div>
@@ -43,18 +43,18 @@
             <div class="project transition1">
                 <a href="project.html" >Projects</a>
                 <div class="projectContent ">
-                    <a href="project.html#c1" target="_blank">WebSite</a>
-                    <a href="project.html#c2" target="_blank">Program</a>
-                    <a href="project.html#c3" target="_blank">Apps</a>
-                    <a href="project.html#c4" target="_blank">Software</a>
+                    <a href="project.html#c1" >Frontend UI/UX Projects</a>
+                    <a href="project.html#c2" >Mini Projects</a>
+                    <a href="project.html#c3" >Backend & API Development</a>
+                    <a href="project.html#c4" >Full-Stack Projects</a>
                 </div>
             </div>
             <div class="certificate transition1">
                 <a href="Certificate.html" >Certificate's</a>
                 <div class="certificateContent">
-                    <a href="Certificate.html#c1" target="_blank">Web Development</a>
-                    <a href="Certificate.html#c2" target="_blank">SQL Certificate</a>
-                    <a href="Certificate.html#c3" target="_blank">MS Office</a>
+                    <a href="Certificate.html#c1" >Web Development</a>
+                    <a href="Certificate.html#c2" >SQL Certificate</a>
+                    <a href="Certificate.html#c3" >MS Office</a>
                 </div>
             </div>
             
