--- a/education.html
+++ b/education.html
@@ -13,7 +13,7 @@
         <div class="navbar">
             <div class="sarfraz">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="index.html" target="_parent">
                         <img src="images/icon/user-graduate-solid.svg" alt="portfolio" title="Portfolio Logo.">
                     </a>
                 </div>
@@ -33,28 +33,28 @@
             <div class="skill">
                 <a href="skill.html" >Skills</a>
                 <div class="skillContent transition1">
-                    <a href="skill.html#c1" target="_blank">Programming Languages</a>
-                    <a href="skill.html#c2" target="_blank">Web Development</a>
-                    <a href="skill.html#c3" target="_blank">databases</a>
-                    <a href="skill.html#c4" target="_blank">Software & Tools</a>
-                    <a href="skill.html#c5" target="_blank">Soft Skills</a>                   
+                    <a href="skill.html#c1" >Programming Languages</a>
+                    <a href="skill.html#c2" >Web Development</a>
+                    <a href="skill.html#c3" >databases</a>
+                    <a href="skill.html#c4" >Software & Tools</a>
+                    <a href="skill.html#c5" >Soft Skills</a>                   
                 </div>
             </div>
             <div class="project transition1">
                 <a href="project.html" >Projects</a>
                 <div class="projectContent ">
-                    <a href="project.html#c1" target="_blank">WebSite</a>
-                    <a href="project.html#c2" target="_blank">Program</a>
-                    <a href="project.html#c3" target="_blank">Apps</a>
-                    <a href="project.html#c4" target="_blank">Software</a>
+                    <a href="project.html#c1" >Frontend UI/UX Projects</a>
+                    <a href="project.html#c2" >Mini Projects</a>
+                    <a href="project.html#c3" >Backend & API Development/a>
+                    <a href="project.html#c4" >Full-Stack Projects</a>
                 </div>
             </div>
             <div class="certificate transition1">
                 <a href="Certificate.html" >Certificate's</a>
                 <div class="certificateContent">
-                    <a href="Certificate.html#c1" target="_blank">Web Development</a>
-                    <a href="Certificate.html#c2" target="_blank">SQL Certificate</a>
-                    <a href="Certificate.html#c3" target="_blank">MS Office</a>
+                    <a href="Certificate.html#c1" >Web Development</a>
+                    <a href="Certificate.html#c2" >SQL Certificate</a>
+                    <a href="Certificate.html#c3" >MS Office</a>
                 </div>
             </div>
             
@@ -70,7 +70,7 @@
             <div class="resume">
                 <a href="resume.html" >Resume</a>
                 <div class="resumeContent transition1">
-                    <a href="resume.html" target="_blank">
+                    <a href="resume.html">
                         <img src="images/sarfraz.png" height="400">
                     </a>
                 </div>
